--- a/index.html
+++ b/index.html
@@ -7,5 +7,11 @@
 </head>
 <body>
     <H1>Hola Mundo</H1>
+    <ul>
+        <li>inicio</li>
+        <li>productos</li>
+        <li>clientes</li>
+        <li>Acerca de</li>
+    </ul>
 </body>
 </html>
