--- a/index.html
+++ b/index.html
@@ -13,5 +13,12 @@
         <li>clientes</li>
         <li>Acerca de</li>
     </ul>
+    <header>
+        <h1>Titulo de la empresa</h1>
+    </header>
+    <section>
+        <h1>productos</h1>
+    </section>
+    <footer>creado por el ing. july</footer>
 </body>
 </html>
